--- a/repositoryUserInterface/app/views/Application/device.html
+++ b/repositoryUserInterface/app/views/Application/device.html
@@ -400,14 +400,14 @@
 			<!--<div id="getDeviceErrorDiv" class ="errorDiv"></div>-->
 			<h1 class="newfont" id="device" style="text-align:center;">Registered devices</h1>
 			<hr>
+			<button id="addNewDeviceOrTemplate" class="google-button-blue" style="display:block;float:right">
+				Create New Device/Template
+			</button><br/><br/>	
 			<div id="accordion"></div>
 			<h1 class="newfont" style="text-align:center;" id="template">Registered templates</h1>
 			<div id="accordion1"></div>
 			<hr>
-			<!--<div id="errorDiv" class="errorDiv"></div>-->
-			<button id="addNewDeviceOrTemplate" class="google-button-blue">
-				Create New Device/Template
-			</button>
+			<!--<div id="errorDiv" class="errorDiv"></div>-->			
 		</div>
 		<div id="iFields">
 			<input id="username"  type="hidden" value=${username}> 
