--- a/repositoryUserInterface/app/views/Application/guardrule.html
+++ b/repositoryUserInterface/app/views/Application/guardrule.html
@@ -352,14 +352,15 @@
 			<div id="selectedVPDS" style="float:right; font-size: 12px"><b>Selected VPDS:</b><label id="labelVpdsname"></label></div>
 			<br/>
 			<div id="getDeviceErrorDiv" class ="errorDiv"></div>
-			<h1 class="newfont" id="guardrule" style="text-align:center;">Guard Rules Created</h1>
+			<h1 class="newfont" id="guardrule" style="text-align:center;">Guard Rules Created</h1>			
 			<hr>
+			<button id="addGuardRule" class="google-button-blue" style="float:right">
+				Create New Guard Rule
+			</button><br/><br/>
 			<div id="accordion"></div>			
 			<hr>
 			<div id="errorDiv" class="errorDiv"></div>
-			<button id="addGuardRule" class="google-button-blue">
-				Create New Guard Rule
-			</button>
+			
 			<input type="hidden"  id ="username" value =${username}></input>
 		</div>
 		<br/>
