--- a/repositoryUserInterface/public/stylesheets/style.css
+++ b/repositoryUserInterface/public/stylesheets/style.css
@@ -509,6 +509,7 @@ box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 
 .google-button-blue {
 border: 1px solid #3079ED;
+font-family: "Trebuchet MS", Helvetica, sans-serif;
 color: white;
 text-shadow: 0 1px rgba(0, 0, 0, 0.1);
 text-transform: uppercase;
