Modified query data UI

--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -380,6 +380,7 @@
 						if (!(receivedData.hasOwnProperty(RESPONSE_STATUS_CODE)))
 						//Means it contains data
 						{
+							alert("Data there");
 						
 							/************** -------------- Changes ---------------- ****************/
 							if (receivedData.hasOwnProperty("filename")) {
@@ -426,8 +427,8 @@
 						
 
 						} else {
-
-							var r = showNoty("Error occured in fetching data/Data does not exist for " + "center", "off",5000);
+							$.noty.closeAll();
+							var r = showNoty("Error occured in fetching data/Data does not exist for your query" , "center", "off",5000);
 						}
 
 					} catch(e) {
