--- a/repositoryUserInterface/app/views/Application/userdisplay.html
+++ b/repositoryUserInterface/app/views/Application/userdisplay.html
@@ -729,6 +729,7 @@
 					var query = {};
 
 					var selectedDeviceName = devicename;
+					$("#imageDiv").hide();
 
 					if ($(ID_START_DATE_TIME_DISPLAY).val().length > 0) {
 						startTime = datetimeToEpoch($(ID_START_DATE_TIME_DISPLAY).val());
