--- a/repositoryUserInterface/app/views/Application/display.html
+++ b/repositoryUserInterface/app/views/Application/display.html
@@ -392,7 +392,7 @@
 								$("#imageDiv").show();
 								$("#tools").hide();
 								var s=receivedData["filename"];
-								$("#staticImage").attr("src","../public/"+s);
+								$("#staticImage").attr("src","../public/generatedImages/"+s);
 								downloadData.push("The data cannot be downloaded. Please reduce the time");
 								$("#speed").attr("disabled","disabled");
 							} 
